# verilog-dot

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  verilog-ast-walk.c  verilog-ast-walk.h  verilog-dot-emit.c  verilog-dot-emit.h  verilog-dot.h  verilog-module-inherit.c  verilog-module-inherit.h
tests/: simple.v
